--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+    <style>
+body {background-color: lime;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+  </head>
 <body>
-<p>test</p>
+<p>haha funnie!1!!!!</p>
 </body>
 </html>
