--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+   <style>
+body {
+  background-color: green;
+     }
+</style>
   </head>
 <body>
 <p>haha funnie!1!!!!</p>
