--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
    <style>
 body {
-  background-color: green;
+  background-color: chartreuse;
      }
+p {
+font-family: cursive;
+ color: blue;
+ font-size: 20px
+}
+img {
+  float: left;
+  height: 120px;
+  width: 90px;
+  margin: 50px;
+  border-bottom-color: hotpink;
+  border-top-color: cyan;
+  border-width: 43px;
+  border-style: double;
+  border-radius: 20px;
 </style>
   </head>
 <body>
 <p>haha funnie!1!!!!</p>
+<img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ" />
 </body>
 </html>
