--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ font-family: cursive;
 img {
   float: left;
   height: 120px;
-  width: 90px;
+  width: 80%;
   margin: 50px;
   border-bottom-color: hotpink;
   border-top-color: cyan;
