--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
    <style>
 body {
-  background-color: chartreuse;
+  background: url(img/hotgarbage.png), linear-gradient(17deg,red,blue,red,blue,red,blue,red,blue,red,blue,red,blue,red,blue);
      }
-p {
+.garbtext1 {
 font-family: cursive;
  color: blue;
- font-size: 20px
+ font-size: 500%;
 }
 img {
   float: left;
-  height: 120px;
+  height: 920px;
   width: 80%;
   margin: 50px;
   border-bottom-color: hotpink;
@@ -23,7 +23,8 @@ img {
 </style>
   </head>
 <body>
-<p>haha funnie!1!!!!</p>
+<p class="garbtext1">haha funnie!1!!!!</p>
+<p>imaĴe belo</p>
 <img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ" />
 </body>
 </html>
