--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
   <head>
    <style>
 body {
-  background: url(img/hotgarbage.png), linear-gradient(17deg,red,blue,red,blue,red,blue,red,blue,red,blue,red,blue,red,blue);
+  background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,yellow,green,blue 1%);
+ cursor:url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
      }
 .garbtext1 {
 font-family: cursive;
  color: blue;
- font-size: 500%;
+ font-size: 980%;
+}
+.button1 {
+ border: 92px dotted chartreuse;
+}
+
+.button1:hover {
+  background-color: #4CAF50; /* Green */
+  height: 90px;
+  width: 90%;
+  color: white;
 }
 img {
   float: left;
   height: 920px;
-  width: 80%;
+  width: 40%;
   margin: 50px;
   border-bottom-color: hotpink;
   border-top-color: cyan;
@@ -26,5 +37,6 @@ img {
 <p class="garbtext1">haha funnie!1!!!!</p>
 <p>imaĴe belo</p>
 <img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ" />
+<button class="button1" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦​⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')">UugBGFTG!!! LOL HAHA LAMO ROFL!212!!!!1!11</button>
 </body>
 </html>
