--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
    <style>
 body {
   background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,yellow,green,blue 1%);
- cursor:url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
-     }
+cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 1 12, pointer;
+}
 .garbtext1 {
 font-family: cursive;
  color: blue;
