--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
    <style>
 body {
-  background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,yellow,green,blue 1%);
+  background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%);
 cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 1 12, pointer;
 }
 .garbtext1 {
 font-family: cursive;
  color: blue;
  font-size: 980%;
+ border: 23px double cyan;
 }
 .button1 {
- border: 92px dotted chartreuse;
+ border: 362px dotted chartreuse;
 }
 
 .button1:hover {
@@ -20,12 +21,13 @@ font-family: cursive;
   height: 90px;
   width: 90%;
   color: white;
+  border: 2px double cyan;
 }
 img {
   float: left;
   height: 920px;
   width: 40%;
-  margin: 50px;
+  margin: 5px;
   border-bottom-color: hotpink;
   border-top-color: cyan;
   border-width: 43px;
@@ -34,6 +36,8 @@ img {
 </style>
   </head>
 <body>
+ <title>Worst Website Ever</title>
+  <link rel="icon" type="image/x-icon" href="image/favicon.png">
 <p class="garbtext1">haha funnie!1!!!!</p>
 <p>imaĴe belo</p>
 <img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ" />
