--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <title>Worst Website Ever</title>
-  <link rel="icon" type="image/x-icon" href="image/favicon.png">
+  <link rel="icon" type="x-icon" href="favicon.png">
    <style>
 body {
   background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%);
