--- a/index.html
+++ b/index.html
@@ -4,43 +4,41 @@
    <title>Worst Website Ever</title>
   <link rel="icon" type="x-icon" href="favicon.png">
    <style>
-body {
-  background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%);
-cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 1 12, pointer;
-}
-.garbtext1 {
-font-family: cursive;
- color: blue;
- font-size: 980%;
- border: 23px double cyan;
-}
-.button1 {
- border: 362px dotted chartreuse;
-}
+body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 22 -22, pointer;}
 
-.button1:hover {
-  background-color: #4CAF50; /* Green */
-  height: 90px;
-  width: 90%;
-  color: white;
-  border: 2px double cyan;
-}
-img {
-  float: left;
-  height: 920px;
-  width: 40%;
-  margin: 5px;
-  border-bottom-color: hotpink;
-  border-top-color: cyan;
-  border-width: 43px;
-  border-style: double;
-  border-radius: 20px;
+.garbtext1 {font-family: cursive; color: blue; font-size: 980%; border: 23px double cyan;}
+.garbtext1:hover {font-family: cursive; color: gold; font-size: 980%; border: 23px double cyan;}
+
+.button1 {font-family: monospace; font-size: 430%;border: 23px dotted chartreuse;}
+.button1:hover {background-color: #4CAF50; height: 90px; width: 90%; color: white; border: 23px double cyan;}
+
+img {float: left;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
+img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
+
+.div1 {border-style: dotted;border-width: 42px;border-color: chartreuse; background-color:magenta;text-align: left;}
+.div1:hover {border-style: dotted;border-width: 42px;border-color: red; background-color:mediumspringgreen;text-align: right;}
 </style>
   </head>
 <body>
-<p class="garbtext1">haha funnie!1!!!!</p>
-<p>imaĴe belo</p>
+<audio id="sOnGAAA" autoplay>
+  <source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3">
+  Your browser does not support the audio tag.
+</audio>
+
+<button id="disablemusic" disabled=1 onclick="document.getElementById('sOnGAAA').muted='true'">stop song</button>
+
+<p class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
+
+<div class="div1">
+<b>imaĴe belo</b>
+</div>
+
 <img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ" />
+
 <button class="button1" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦​⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')">UugBGFTG!!! LOL HAHA LAMO ROFL!212!!!!1!11</button>
+
+<div class="div1">
+<b>imaĴe belo</b>
+</div>
 </body>
 </html>
