--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,b
 .button1 {font-family: monospace; font-size: 430%;border: 23px dotted chartreuse;}
 .button1:hover {background-color: #4CAF50; height: 90px; width: 90%; color: white; border: 23px double cyan;}
 
+.button2 {font-family: monospace;color:white;background-color: green;border: 5px solid lime;border-radius: 5px}
+.button2:disabled {font-family: monospace;color:gray;background-color: darkgreen;border: 5px solid  green;border-radius: 5px}
+
 img {float: left;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
 img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
 
@@ -25,7 +28,7 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
   Your browser does not support the audio tag.
 </audio>
 
-<button id="disablemusic" disabled=1 onclick="document.getElementById('sOnGAAA').muted='true'">stop song</button>
+<button class="button2" id="disablemusic" disabled=1 onclick="document.getElementById('sOnGAAA').muted='true'">stop song</button>
 
 <p class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
 
