--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
+<html><head>
    <title>Worst Website Ever</title>
   <link rel="icon" type="x-icon" href="favicon.png">
    <style>
@@ -23,12 +21,12 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 </style>
   </head>
 <body>
-<audio id="sOnGAAA" autoplay>
+<audio id="sOnGAAA" autoplay='true'>
   <source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3">
   Your browser does not support the audio tag.
 </audio>
 
-<button class="button2" id="disablemusic" disabled=1 onclick="document.getElementById('sOnGAAA').muted='true'">stop song</button>
+<button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').muted='true'">stop song</button>
 
 <p class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
 
@@ -36,12 +34,13 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 <b>imaĴe belo</b>
 </div>
 
-<img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ" />
+<img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ">
 
-<button class="button1" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦​⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')">UugBGFTG!!! LOL HAHA LAMO ROFL!212!!!!1!11</button>
+<button class="button1" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦&ZeroWidthSpace;⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')">UugBGFTG!!! LOL HAHA LAMO ROFL!212!!!!1!11</button>
 
 <div class="div1">
 <b>imaĴe belo</b>
 </div>
-</body>
-</html>
+
+
+</body></html>
