--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <title>Worst Website Ever</title>
   <link rel="icon" type="x-icon" href="favicon.png">
    <style>
-body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 22 -22, pointer;}
+body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 22 -22, auto;}
 
 .garbtext1 {font-family: cursive; color: blue; font-size: 980%; border: 23px double cyan;}
 .garbtext1:hover {font-family: cursive; color: gold; font-size: 980%; border: 23px double cyan;}
@@ -21,12 +21,10 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 </style>
   </head>
 <body>
-<audio id="sOnGAAA" autoplay='true'>
-  <source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3">
-  Your browser does not support the audio tag.
-</audio>
+<iframe src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" allow="autoplay" style="display:none" id="sOnGAAA">
+</iframe> 
 
-<button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').muted='true'">stop song</button>
+<button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').src='about:blank'">stop song</button>
 
 <p class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
 
