--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head>
+<html>
+<head>
+<video width="0px" autoplay="" name="media" id="sOnGAAA"><source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3"></video>
    <title>Worst Website Ever</title>
   <link rel="icon" type="x-icon" href="favicon.png">
    <style>
@@ -21,8 +23,6 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 </style>
   </head>
 <body>
-<iframe src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" allow="autoplay" style="display:none" id="sOnGAAA">
-</iframe> 
 
 <button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').src='about:blank'">stop song</button>
 
