--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 </style>
   </head>
 <body>
-   <video width="0px" controls="" autoplay="" name="media" id="sOnGAAA"><source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3"></video>
+<video width="1px" autoplay="1" controls="1" name="media" id="sOnGAAA"><source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3"></video>
+
 <button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').src='about:blank'">stop song</button>
 
 <p class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
