--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
+<!--"document.getElementById('sOnGAAA').src='about:blank'-->
    <title>Worst Website Ever</title>
   <link rel="icon" type="x-icon" href="favicon.png">
    <style>
-body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 22 -22, auto;}
+body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 22 -22, auto;onmousehover:document.getElementById('disablemusic').disabled=0;}
 
 .garbtext1 {font-family: cursive; color: blue; font-size: 980%; border: 23px double cyan;}
 .garbtext1:hover {font-family: cursive; color: gold; font-size: 980%; border: 23px double cyan;}
@@ -22,7 +23,7 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 </style>
   </head>
 <body>
-<video width="1px" autoplay="1" controls="1" name="media" id="sOnGAAA"><source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3"></video>
+<video width="1px" autoplay controls name="media" id="sOnGAAA"><source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3" id="sOnGAAA"></video>
 
 <button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').src='about:blank'">stop song</button>
 
@@ -39,6 +40,5 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 <div class="div1">
 <b>imaĴe belo</b>
 </div>
-
 
 </body></html>
