--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>Worst Website Ever</title>
   <link rel="icon" type="x-icon" href="favicon.png">
    <style>
-body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png) 22 -22, auto;onmousehover:document.getElementById('disablemusic').disabled=0;}
+body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png), pointer;}
 
 .garbtext1 {font-family: cursive; color: blue; font-size: 980%; border: 23px double cyan;}
 .garbtext1:hover {font-family: cursive; color: gold; font-size: 980%; border: 23px double cyan;}
@@ -23,7 +23,7 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 </style>
   </head>
 <body>
-<video width="1px" autoplay controls name="media" id="sOnGAAA"><source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3" id="sOnGAAA"></video>
+<video controls name="media" id="sOnGAAA"><source src="https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/god%20awful%20mario%20theme%20part%202.mp3" type="audio/mp3"></video>
 
 <button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').src='about:blank'">stop song</button>
 
@@ -38,7 +38,6 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 <button class="button1" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦&ZeroWidthSpace;⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')">UugBGFTG!!! LOL HAHA LAMO ROFL!212!!!!1!11</button>
 
 <div class="div1">
-<b>imaĴe belo</b>
+<b>scribesu!<br><br><br><br><br><br><br><br><br><br><br><br>👩‍🦰</b>
 </div>
-
 </body></html>
