--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,blue,green,blue,purple,blue,cyan,blue,red,red,red,red,yellow,green,blue 1%); cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol.png), pointer;}
 
 .garbtext1 {font-family: cursive; color: blue; font-size: 980%; border: 23px double cyan;}
-.garbtext1:hover {font-family: cursive; color: gold; font-size: 980%; border: 23px double cyan;}
+.garbtext1:hover {onclick:openFullscreen();font-family: cursive; color: gold; font-size: 980%; border: 23px double cyan;}
 
 .button1 {font-family: monospace; font-size: 430%;border: 23px dotted chartreuse;}
 .button1:hover {background-color: #4CAF50; height: 90px; width: 90%; color: white; border: 23px double cyan;}
 
 .button2 {font-family: monospace;color:white;background-color: green;border: 5px solid lime;border-radius: 5px}
-.button2:disabled {font-family: monospace;color:gray;background-color: darkgreen;border: 5px solid  green;border-radius: 5px}
+.button2:disabled {;font-family: monospace;color:gray;background-color: darkgreen;border: 5px solid  green;border-radius: 5px}
 
-img {float: left;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
-img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
+.img2 {float: left;margin: 90px;border-bottom-color: magenta;border-top-color: white;border-width: 43px;border-style: ridge;border-radius: 20px;cursor: url(https://worstwebsite.github.io/worstwebsite.com.net.xyz.123/cursorlol4.png), pointer;}
+
+.img1 {float: left;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
+.img1:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color: hotpink;border-top-color: cyan;border-width: 43px;border-style: double;border-radius: 20px;}
 
 .div1 {border-style: dotted;border-width: 42px;border-color: chartreuse; background-color:magenta;text-align: left;}
 .div1:hover {border-style: dotted;border-width: 42px;border-color: red; background-color:mediumspringgreen;text-align: right;}
@@ -33,11 +35,26 @@ img:hover {float: right;height: 920px;width: 40%;margin: 5px;border-bottom-color
 <b>imaĴe belo</b>
 </div>
 
-<img src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ">
-
+<img class="img1" src="hotgarbage.png" alt="RrrrRRrrRRRRⁿ">
 <button class="button1" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦&ZeroWidthSpace;⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')">UugBGFTG!!! LOL HAHA LAMO ROFL!212!!!!1!11</button>
 
 <div class="div1">
 <b>scribesu!<br><br><br><br><br><br><br><br><br><br><br><br>👩‍🦰</b>
 </div>
+<br>
+<a>
+<img class="img2" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦&ZeroWidthSpace;⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')" src="https://raw.githubusercontent.com/WorstWebsite/worstwebsite.com.net.xyz.123/main/fad1.png">
+</a>
+<script>
+var elem = document.documentElement;
+function openFullscreen() {
+  if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.webkitRequestFullscreen) { /* Safari */
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { /* IE11 */
+    elem.msRequestFullscreen();
+  }
+}
+</script>
 </body></html>
