--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,b
 
 <button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').src='about:blank'">stop song</button>
 
-<p class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
+<p  onmouseenter="openFullscreen()" class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
 
 <div class="div1">
 <b>imaĴe belo</b>
@@ -43,7 +43,11 @@ body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,b
 </div>
 <br>
 <a>
-<img class="img2" onclick="confirm('ă↭↭↘ΚΜΛă↭bàI↭Iʮⁿʮʯɧⁿĥɢŗ\n☀ⷱ⹇℈⻥⽎⹫⚤␋ⅶ⮪⎬⸚⬠⼖⢧◈⬩⑺⯀⒔⾝▛ⓡ⎧⧀☪⌦❁⑜⬋⤱⸐ⴓⳀ⊩ⶂ⺁⋯ⵏ≠ⱑ⭮⿘⹓⼁ⵄ⺃⚈⸀⎁⯳ⶸ↗❬┼⵩⟫╽⳦☺ⶓ⯊␝⎲␣ⲯ⼵Ⱙ⛜⮧⨋⤌ⰵ⤎⟦⃼⾌⛦┎♇⇽⿰⬻⏑❓⌐⧋⟔⷗₢⑂⋻Ⳃ⣐⯔ⷐ⯐┯⁺\n➈◪⌺≌⡠⣿✎┙⽑⤟⎬⯌⹫⬗⯓⇥⿕⣋⧝⛽⽙⨄⢱₦ ␪⏰⊾∿┯⮥☦⧅⥯❯⁭⾳▬◽⹎⥦&ZeroWidthSpace;⯟⸳☀ⓗ⦂℔┵⚀⛽⢁Ⳙ⑂❂╸ⲃ❌⮠⓪⤥♾Ⰳ⎃♕♓≨ℼ⮤➯ⓛ⛈⒡ⲓ⨡ℍ⧚☿Ⅱ⾖⺭⠥⛺⨍ⅿ⦺▄ⴑ⎅⅔ⅅ≌▣➛℘⽘☍⵷⬀⭶')" src="https://raw.githubusercontent.com/WorstWebsite/worstwebsite.com.net.xyz.123/main/fad1.png">
+<img class="img2" src="https://raw.githubusercontent.com/WorstWebsite/worstwebsite.com.net.xyz.123/main/fad1.png">
+<img class="img2" src="https://raw.githubusercontent.com/WorstWebsite/worstwebsite.com.net.xyz.123/main/fad1.png">
+<img class="img2" src="https://raw.githubusercontent.com/WorstWebsite/worstwebsite.com.net.xyz.123/main/fad1.png">
+<img class="img2" src="https://raw.githubusercontent.com/WorstWebsite/worstwebsite.com.net.xyz.123/main/fad1.png">
+<img class="img2" src="https://raw.githubusercontent.com/WorstWebsite/worstwebsite.com.net.xyz.123/main/fad1.png">
 </a>
 <script>
 var elem = document.documentElement;
