--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ body {background: url(img/hotgarbage.png), repeating-linear-gradient(69deg,red,b
 <button class="button2" id="disablemusic" disabled="1" onclick="document.getElementById('sOnGAAA').src='about:blank'">stop song</button>
 
 <p  onmouseenter="openFullscreen()" class="garbtext1" onclick="document.getElementById('disablemusic').disabled=0">haha funnie!1!!!!</p>
+   
+   <p  onmouseenter="openFullscreen()" class="garbtext1" onclick="alert('ololol')">ⁿⁿⁿⁿⁿⁿⁿⁿⁿⁿⁿⁿⁿⁿⁿ</p>
 
 <div class="div1">
 <b>imaĴe belo</b>
