--- a/pasatsoundblrrd.html
+++ b/pasatsoundblrrd.html
@@ -3,7 +3,7 @@
 <style>
 .body {background-color:tomato}
 </style>
-<body style="background-image:linear-gradient(hotpink, maroon, blue, gray, white);">
+<body style="background-image:linear-gradient(gray, gray);">
 <h1 font-family="monospace" background-color="red">dOOMZ PAASAT SOuND EfECX boRD</h1>
 
 keyboard <audio controls>
